--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,5 +9,10 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:text="textView01"/>
+    <TextView
+        android:id="@+id/textView02"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:text="textView02"/>
 
 </LinearLayout>
