--- a/app/src/main/res/layout/test_layout.xml
+++ b/app/src/main/res/layout/test_layout.xml
@@ -2,5 +2,9 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-
+    <TextView
+        android:id="@+id/textView01"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:text="textView01"/>
 </LinearLayout>
