--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,5 +14,10 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:text="textView02"/>
+    <TextView
+        android:id="@+id/textView03"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:text="textView03"/>
 
 </LinearLayout>
