activity_main 레이아웃 textView02 에 onClick 이벤트 추가 TestActivity에 test_layout 호출

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,6 +13,7 @@
         android:id="@+id/textView02"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="textView02"/>
+        android:text="textView02"
+        android:onClick="onClickedTextView02"/>
 
 </LinearLayout>
