--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,4 +25,14 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="textView04"/>
+    <TextView
+        android:id="@+id/textView05"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="textView05"/>
+    <TextView
+        android:id="@+id/textView06"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="textView06"/>
 </LinearLayout>
