--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -35,4 +35,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="textView06"/>
+    <TextView
+        android:id="@+id/textView07"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="textView07"/>
 </LinearLayout>
